src/test/ui/suggestions/suggest-borrow-to-dyn-object.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/suggest-borrow-to-dyn-object.rs:12:11
   |
LL |     check(s);
   |           ^ doesn't have a size known at compile-time
   |
   = help: within `OsStr`, the trait `Sized` is not implemented for `[u8]`
   = note: required because it appears within the type `OsStr`
   = note: required for the cast from `OsStr` to the object type `dyn AsRef<Path>`
help: consider borrowing the value, since `&OsStr` can be coerced into `dyn AsRef<Path>`
   |
LL |     check(&s);
   |           +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
